# lrpt_pp

./: .gitignore  CMakeLists.txt  README.md  channel.c  channel.h  composite.c  composite.h  image.c  image.h  main.c  rectify.h  resources.xml  utils.c  utils.h
effects/: enhancements.c  enhancements.h  rectify.c  rectify.h  sharpen.c  sharpen.h
glade/: #ui.glade#  ui.glade  ui.glade~
gui/: composite_preview.c  gui.c  gui.h  menu.c  save.c  save.h
palettes/: hvc.c  hvc_precip.c  palettes.h  thermal.c  vegetation.c
